test/compile-fail/resolution/conflicts/use/top.rhdl
mod a {
    pub struct b {}
} mod c {
    pub struct b {}
}

use a::{b, b};
use a::b;
use c::b;
